# lgx2userspace

./: .gitignore  999-avermedia.rules  CMakeLists.txt  LICENCE.md  README.md  TC-Mingw.cmake  TODO.md  WINDOWS.md  conan.cmake  dependencies.cmake  version.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
src/: ChronoLogger.cpp  ChronoLogger.h  FakeStream.cpp  FakeStream.h  FrameBuilder.cpp  FrameBuilder.h  NOOPLogger.cpp  NOOPLogger.h  NullFrameOutput.cpp  NullFrameOutput.h  OptionParser.cpp  OptionParser.h  PulseAudioOutput.cpp  PulseAudioOutput.h  SdlFrameOutput.cpp  SdlFrameOutput.h  UsbStream.cpp  UsbStream.h  V4LFrameOutput.cpp  V4LFrameOutput.h  commanddata.cpp  commanddata.h  commanddata_lgx2.cpp  lgxdevice.cpp  lgxdevice.h  main.cpp
src/cli/: CMakeLists.txt  OptionParser.cpp  OptionParser.h  glfwmain.cpp  main.cpp  sfmlmain.cpp
src/gtk/: CMakeLists.txt  gtkmain.cpp
src/gtk/src/: gdkpixbufvideooutput.cpp  gdkpixbufvideooutput.h  lgxsession.cpp  lgxsession.h  main.cpp
src/liblgx/: CMakeLists.txt  FrameBuilder.cpp  FrameBuilder.h  NullAudioOutput.cpp  NullVideoOutput.cpp  NullVideoOutput.h  UsbStream.cpp  commanddata_lgx.h  dependencies.cmake  lgxdevice.cpp  lgxdevice.h  liblgx.h
src/liblgx/bootstrap/: commanddata_lgx2.h
src/liblgx/liblgx-common/: CMakeLists.txt
src/liblgx/liblgx-common/src/: FakeUsbStream.cpp  FakeUsbStream.h  NullAudioOutput.cpp  NullAudioOutput.h  NullVideoOutput.cpp  NullVideoOutput.h  SimpleErrorSink.cpp  SimpleErrorSink.h  lgxcommon.h
src/liblgx/liblgx-common/src/glfw/: GlfwFrameOutput.cpp  GlfwFrameOutput.h  GlfwVideoOutput.cpp  GlfwVideoOutput.h  glfwdata.h
src/liblgx/liblgx-common/src/sdl/: SdlAudioOutput.cpp  SdlAudioOutput.h  SdlFrameOutput.cpp  SdlVideoOutput.cpp  SdlVideoOutput.h
src/liblgx/liblgx-common/src/usb/: UsbStream.cpp  UsbStream.h
src/liblgx/liblgx-linux/: CMakeLists.txt
src/liblgx/liblgx-linux/src/: lgxplatform.h
src/liblgx/liblgx-linux/src/libao/: AoAudioOutput.cpp  AoAudioOutput.h
src/liblgx/liblgx-linux/src/v4l/: V4LFrameOutput.cpp  V4LFrameOutput.h
src/liblgx/liblgx-macos/: CMakeLists.txt
src/liblgx/liblgx-macos/src/: MacOsErrorSink.cpp  MacOsErrorSink.h  lgxplatform.h
src/liblgx/liblgx-windows/: CMakeLists.txt
src/liblgx/liblgx-windows/src/: WindowsErrorSink.cpp  WindowsErrorSink.h  lgxplatform.h  unused.cpp
src/liblgx/logging/: ChronoLogger.cpp  ChronoLogger.h
src/liblgx/pulseaudio/: PulseAudioOutput.cpp  PulseAudioOutput.h
src/liblgx/sdl/: SdlFrameOutput.cpp  SdlFrameOutput.h
src/liblgx/src/: FrameBuilder.cpp  FrameBuilder.h  NullAudioOutput.cpp  lgxdevice.cpp  lgxdevice.h  liblgx.h
src/liblgx/src/bootstrap/: commanddata_lgx.cpp  commanddata_lgx.h
src/liblgx/src/logging/: ChronoLogger.cpp  ChronoLogger.h  NOOPLogger.cpp
src/liblgx/src/pulseaudio/: PulseAudioOutput.h
src/liblgx/src/sdl/: SdlFrameOutput.cpp  SdlFrameOutput.h
src/liblgx/src/sfml/: SFMLFrameOutput.cpp  SFMLFrameOutput.h
src/liblgx/src/usb/: UsbStream.cpp  UsbStream.h
src/liblgx/src/v4l/: V4LFrameOutput.cpp  V4LFrameOutput.h
src/liblgx/test/: FrameBuilder.t.cpp
src/liblgx/usb/: UsbStream.cpp  UsbStream.h
src/liblgx/v4l/: V4LFrameOutput.cpp  V4LFrameOutput.h
src/qt/: CMakeLists.txt
src/qt/src/: LgxDeviceThread.cpp  LgxDeviceThread.h  LgxWidget.cpp  LgxWidget.h  OpenGLDisplay.cpp  OpenGLDisplay.h  main.cpp
utils/: usbsneef.c
